CHanges on 2015-02-26 12:54pm

--- a/00_IPNotebooks.ipynb
+++ b/00_IPNotebooks.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:68f3a94cfd039d78181a38af61bc416597c926f69e5fb412c9ef06ba4946d6c4"
+  "signature": "sha256:952b05de01efde795d7cf76a5090b8ad3a939a9588e8c86359dc3e1785115717"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -137,6 +137,17 @@
       }
      ],
      "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# References\n",
+      "\n",
+      "* [**IPython Notebook** page](http://ipython.org/notebook.html)\n",
+      "* [**IPython Notebook** Documentation](http://ipython.org/documentation.html)\n",
+      "* [**Markdown** syntax](http://daringfireball.net/projects/markdown/basics)"
+     ]
     },
     {
      "cell_type": "code",
